Add todo
Signed-off-by: cmoulliard <cmoulliard@redhat.com>